internal/k8s/networkpolicy/testdata/network-policies/network-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: kyma-system
  name: kyma-project.io--btp-operator-allow-to-apiserver
  labels:
    app.kubernetes.io/managed-by: btp-manager
    kyma-project.io/module: btp-operator
spec:
  podSelector:
    matchLabels:
      kyma-project.io/module: btp-operator
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 443
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: kyma-system
  name: kyma-project.io--btp-operator-to-dns
  labels:
    app.kubernetes.io/managed-by: btp-manager
    kyma-project.io/module: btp-operator
spec:
  podSelector:
    matchLabels:
      kyma-project.io/module: btp-operator
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 53
      protocol: UDP
